@@ -162,19 +162,6 @@
                           (set-close-menu-item-state! a-frame #t))
                         frames))))
       
-      (field [open-here-frame #f])
-      (define/public (set-open-here-frame fr) (set! open-here-frame fr))
-      (define/public (get-open-here-frame)
-        (cond
-          [open-here-frame open-here-frame]
-          [else
-           (let ([candidates
-                  (filter (λ (x) (is-a? (frame-frame x) frame:open-here<%>))
-                          frames)])
-             (if (null? candidates)
-                 #f
-                 (frame-frame (car candidates))))]))
-      
       (define/public (get-mdi-parent)
         (when (and (eq? (system-type) 'windows)
                    (preferences:get 'framework:windows-mdi)
